<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_exam_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/default_exam_text"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="@dimen/text_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_quick_choices"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_exam_hint">

        <Button
            android:id="@+id/btn_exam_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_exam_10"
            android:drawableTop="@drawable/ic_timer"
            android:drawablePadding="6dp" />

        <Button
            android:id="@+id/btn_exam_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/btn_exam_20"
            android:drawableTop="@drawable/ic_timer"
            android:drawablePadding="6dp"/>

        <Button
            android:id="@+id/btn_exam_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/btn_exam_30"
            android:drawableTop="@drawable/ic_timer"
            android:drawablePadding="6dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
