<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="8dp"
    android:background="@drawable/bg_card"
    android:elevation="4dp">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_icon"
            android:contentDescription="@string/img_description"
            android:src="@drawable/ic_question"
            android:layout_width="@dimen/img_icon_width"
            android:layout_height="@dimen/img_icon_height"
            android:layout_marginEnd="@dimen/margin_medium"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_question_number"
                android:text="@string/label_question_number"
                android:textStyle="bold"
                android:textSize="@dimen/text_large"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tv_question_content"
                android:text="@string/default_question_content"
                android:textSize="@dimen/text_medium"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
